# DataWeaver.AI

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP_SUMMARY.md  GOOGLE_DRIVE_API_INTEGRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PORT_MANAGEMENT.md  README.md  RELEASE_ANNOUNCEMENT.md  RELEASE_SUMMARY.md  check_ports.sh  setup.sh  start.bat  start.py  start.sh
backend/: .coveragerc  README_BIO_ENTITIES.md  TESTING.md  TESTING_GUIDE.md  alembic.ini  demo_workflow.py  docker-compose.test.yml  env.example  main.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  run_integration_tests.py  setup_test_db.py  simple_server.py  test.db  test_complete_oauth2_flow.py  test_connector_api.py  test_oauth2_config.py  test_server.py
backend/alembic/: env.py
backend/alembic/versions/: 002_add_bio_entities.py  003_add_connector_tables.py  f7c123bd3c74_add_design_build_test_workflow_tables.py
backend/api/: bio_entities.py
backend/app/: database.py
backend/app/api/: __init__.py  auth.py  bio_matcher.py  connectors.py  data_qa.py  datasets.py  files.py  general_chat.py  health.py  intelligent_merge.py  workflows.py
backend/app/core/: logging.py
backend/app/models/: __init__.py  connector.py  dataset.py  file.py  workflow.py  workflow_phases.py
backend/app/schemas/: __init__.py  connector.py  dataset.py  file.py  workflow.py  workflow_phases.py
backend/app/services/: connector_factory.py  data_analyzer.py  data_context.py  data_qa_service.py  file_service.py  intelligent_merger.py  matching_service.py  scenario_manager.py  simple_visualizer.py
backend/app/services/connectors/: __init__.py  google_drive_connector.py
backend/models/: bio_entities.py
backend/sample_data/: README.md  assay_results.csv  customer_data.csv  sales_data.csv
backend/sample_data/use-case-merge/: measurements.csv  sequences.csv
backend/scripts/: generate_bio_demo_data.py  populate_bio_entities.py  run_tests.py
backend/services/: bio_matcher.py  workflow_state.py
backend/tests/: __init__.py  conftest.py  test_api_endpoints.py  test_bio_matcher.py  test_complete_system.py  test_connectors.py  test_data_files.py  test_integration.py  test_models.py  test_system_integration.py
docs/: AI_CHAT_SIDEBAR_TOGGLE.md  API.md  ARCHITECTURE.md  BACKEND_CLEANUP_SUMMARY.md  CHANGELOG.md  CONNECTOR_IMPLEMENTATION_PLAN.md  DATAWEAVER_CORE_GOALS.md  DATA_CONTROL_FLOW.md  DATA_FLOW_DIAGRAM.md  DATA_QA_FEATURE.md  DEPLOYMENT.md  END_TO_END_WORKFLOW_SUMMARY.md  FILE_ORGANIZATION.md  LEGACY_CLEANUP_SUMMARY.md  MERGED_DATA_DISPLAY_DEBUG.md  MERGE_REMERGE_FIX.md  OPENAPI_SUMMARY.md  README.md  RELEASE_1.0.0_SUMMARY.md  RELEASE_CHECKLIST.md  RELEASE_CLEANUP_PLAN.md  RELEASE_CLEANUP_SUMMARY.md  RELEASE_NOTES.md  SECURITY_CHECKLIST.md  SETUP.md  SIDEBAR_TOGGLE.md  SUMMARY.md  SYSTEM_TEST_SUMMARY.md  TEST_IMPROVEMENT_SUMMARY.md  USER_GUIDE.md  env.example  openapi.yaml
(+92 files in other folders)
